feat(game-engine): add credits property to ModMetadata